--- a/index.html
+++ b/index.html
@@ -66,6 +66,6 @@
 
 </body>
 
-<script type="text/javascript" src="/app/script.js"></script>
+<script type="text/javascript" src="app/script.js"></script>
 
 </html>
