--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <body>
 
     <nav class="navbar navbar-expand-lg navbar navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">Name Generator</a>
+        <a class="navbar-brand" href="#">Fantasy Name Generator</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
             aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
